Fix spacing

--- a/master.css
+++ b/master.css
@@ -61,6 +61,10 @@ canvas {
   text-align: center;
 }
 
+.links:hover {
+  cursor: pointer;
+}
+
 .welcome {
   height: 270px;
   width: 200px;
@@ -89,14 +93,14 @@ canvas {
 
 #reset {
   box-sizing: content-box;
-height: 72px;
-width: 200px;
-color: white;
-margin-top: 20px;
-font-size: 30px;
-float: right;
-background: none;
-border: none;
+  height: 72px;
+  width: 200px;
+  color: white;
+  margin-top: 20px;
+  font-size: 30px;
+  float: right;
+  background: none;
+  border: none;
 }
 
 .plank-button{
@@ -106,6 +110,10 @@ border: none;
   width: 200px;
   z-index: -1;
   position: relative;
+}
+
+.plank-button:hover {
+  cursor: pointer;
 }
 
 ul {
